fix: fixed table content overflow container (#273)

--- a/source/css/common/basic.styl
+++ b/source/css/common/basic.styl
@@ -19,7 +19,7 @@
 
   &::-webkit-scrollbar {
     width 0.4rem
-    height 0.4rem
+    height 0.32rem
     transition all 0.2s ease
   }
 
