--- a/source/css/common/markdown.styl
+++ b/source/css/common/markdown.styl
@@ -281,40 +281,52 @@
   }
 
 
-  & > table {
+  & > .table-container {
+    box-sizing border-box
     width 100%
+    margin 1.5rem 0
     overflow auto
-    border-collapse collapse
-    border-spacing 0
 
-    +keep-mobile() {
-      & {
-        table-layout fixed
+    table {
+      box-sizing border-box
+      width 100%
+      border-collapse collapse
+      border-spacing 0
+
+      +keep-mobile() {
+        & {
+          table-layout fixed
+        }
       }
-    }
 
-    td
-    th {
-      padding 0
-    }
+      td
+      th {
+        padding 0
+      }
 
-    th {
-      font-weight 600
-    }
+      td {
+        color var(--text-color-3)
+      }
 
-    td
-    th {
-      padding 0.4rem 1rem
-      border 0.1rem solid var(--border-color)
-    }
+      th {
+        color var(--text-color-2)
+        font-weight 600
+      }
 
-    tr {
-      background-color var(--background-color-1)
-      border 0.1rem solid var(--text-color-6)
-    }
+      td
+      th {
+        padding 0.5rem 1rem
+        border 0.1rem solid var(--border-color)
+      }
 
-    tr:nth-child(2n) {
-      background-color var(--background-color-2)
+      tr {
+        background-color var(--background-color-1)
+        border 0.1rem solid var(--border-color)
+      }
+
+      tr:nth-child(2n) {
+        background-color var(--background-color-2)
+      }
     }
   }
 
